edit index + color edit

--- a/work.scss
+++ b/work.scss
@@ -3,9 +3,9 @@
 //variables
 $desktop: 10%;
 $mobile: 6%;
-$red: #e50872;
-$redHover: #ee3991;
-$redActive: #c50562;
+$red: #ed1f24;
+$redHover: #ff4444;;
+$redActive: #b8181c;
 $lightGrey: #ededed;
 
 .nav{
