--- a/mainstyle.scss
+++ b/mainstyle.scss
@@ -1,9 +1,9 @@
 //variables
 $desktop: 10%;
 $mobile: 6%;
-$red: #e50872;
-$redHover: #ee3991;
-$redActive: #c50562;
+$red: #ed1f24;
+$redHover: #ff4444;;
+$redActive: #b8181c;
 $lightGrey: #ededed;
 
 html, body {
@@ -102,7 +102,7 @@ display: none;
         background-position: center;
     }
     .mainImg2{background-image: url('imgs/arvisual_main04.jpg');}
-    .mainImg3{background-image: url('imgs/arvisual_main03.jpg');}
+    .mainImg3{background-image: url('imgs/arvisual_main05.jpg');}
 }
 //dots settings
 .owl-dots{
