--- a/newsletter.css
+++ b/newsletter.css
@@ -77,7 +77,7 @@ html, body {
 }
 
 .menu a:hover {
-  color: #e50872;
+  color: #ed1f24;
 }
 
 .menuBtn {
@@ -113,7 +113,7 @@ html, body {
 }
 
 .mainCarousel .mainImg3 {
-  background-image: url("imgs/arvisual_main03.jpg");
+  background-image: url("imgs/arvisual_main05.jpg");
 }
 
 .owl-dots {
@@ -123,11 +123,11 @@ html, body {
 }
 
 .owl-dots .active span {
-  background: #e50872 !important;
+  background: #ed1f24 !important;
 }
 
 .owl-dots .owl-dot:hover span {
-  background: #e50872 !important;
+  background: #ed1f24 !important;
 }
 
 .mainInfo {
@@ -185,11 +185,11 @@ html, body {
 }
 
 .mainInfo .socialBtns a:hover {
-  color: #e50872;
+  color: #ed1f24;
 }
 
 .mainInfo .socialBtns a:active {
-  color: #c50562;
+  color: #b8181c;
 }
 
 .mainInfo .socialBtns a .fa-facebook-f {
@@ -201,7 +201,7 @@ html, body {
 }
 
 .mainInfo .mainCta .button {
-  background-color: #e50872;
+  background-color: #ed1f24;
   color: white;
   text-decoration: none;
   -webkit-transition-duration: .2s;
@@ -211,11 +211,11 @@ html, body {
 }
 
 .mainInfo .mainCta .button:hover {
-  background-color: #ee3991;
+  background-color: #ff4444;
 }
 
 .mainInfo .mainCta .button:active {
-  background-color: #c50562;
+  background-color: #b8181c;
 }
 
 .mobileAction {
@@ -498,7 +498,7 @@ html, body {
 
 .modalMain .prev:hover {
   cursor: pointer;
-  color: #e50872;
+  color: #ed1f24;
 }
 
 .modalMain .next {
@@ -515,7 +515,7 @@ html, body {
 
 .modalMain .next:hover {
   cursor: pointer;
-  color: #e50872;
+  color: #ed1f24;
 }
 
 .modalMain .zoom {
@@ -544,7 +544,7 @@ html, body {
 }
 
 .modalMain .exitBtn:hover {
-  color: #e50872;
+  color: #ed1f24;
   cursor: pointer;
 }
 
@@ -663,7 +663,7 @@ html, body {
 }
 
 .calendar .contact_form p a {
-  color: #e50872;
+  color: #ed1f24;
 }
 
 .calendar .contact_form .g-recaptcha {
@@ -1209,7 +1209,7 @@ footer .footerFlex .footInfo .addressFlex:nth-of-type(5) {
             transition-duration: .2s;
   }
   .menuBtn .bars:hover {
-    color: #e50872;
+    color: #ed1f24;
   }
   .menu {
     text-align: center;
@@ -1243,7 +1243,7 @@ footer .footerFlex .footInfo .addressFlex:nth-of-type(5) {
     background-color: white;
   }
   .menuOn a:hover {
-    background-color: #e50872;
+    background-color: #ed1f24;
     -webkit-transition: cubic-bezier(0.77, 0, 0.175, 1);
     transition: cubic-bezier(0.77, 0, 0.175, 1);
     -webkit-animation: cubic-bezier(0.6, -0.28, 0.735, 0.045);
@@ -1369,7 +1369,7 @@ footer .footerFlex .footInfo .addressFlex:nth-of-type(5) {
   }
   .mobileAction .buttonWrap .button {
     font-size: 1em;
-    background-color: #e50872;
+    background-color: #ed1f24;
     color: white;
     padding: 9px 25px 8px 25px;
     text-decoration: none;
@@ -1378,10 +1378,10 @@ footer .footerFlex .footInfo .addressFlex:nth-of-type(5) {
             transition-duration: .2s;
   }
   .mobileAction .buttonWrap .button:hover {
-    background-color: #ee3991;
+    background-color: #ff4444;
   }
   .mobileAction .buttonWrap .button:active {
-    background: #c50562;
+    background: #b8181c;
   }
   .mobileAction .socialBtns {
     position: absolute;
@@ -1398,10 +1398,10 @@ footer .footerFlex .footInfo .addressFlex:nth-of-type(5) {
             transition-duration: .2s;
   }
   .mobileAction .socialBtns a:hover {
-    color: #e50872;
+    color: #ed1f24;
   }
   .mobileAction .socialBtns a:active {
-    color: #c50562;
+    color: #b8181c;
   }
   .mobileAction .socialBtns a .fa-facebook-f {
     font-size: .9em;
@@ -1564,7 +1564,7 @@ footer .footerFlex .footInfo .addressFlex:nth-of-type(5) {
 .portfolio .btnCall a {
   text-decoration: none;
   color: white;
-  background-color: #e50872;
+  background-color: #ed1f24;
   border-radius: 50px;
   padding: 9px 25px 8px 25px;
   -webkit-transition-duration: .2s;
@@ -1573,11 +1573,11 @@ footer .footerFlex .footInfo .addressFlex:nth-of-type(5) {
 
 .portfolio .btnCall a:hover {
   cursor: pointer;
-  background-color: #ee3991;
+  background-color: #ff4444;
 }
 
 .portfolio .btnCall a:active {
-  background-color: #c50562;
+  background-color: #b8181c;
 }
 
 @media only screen and (max-width: 1200px) {
